# Privault

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: deploy-backend.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs  ratelimit.rs  security_headers.rs  storage.rs  usage.rs  validation.rs
backend/src/activity/: handlers.rs  mod.rs  models.rs
backend/src/audit/: mod.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs  session.rs
backend/src/documents/: handlers.rs  mod.rs  models.rs
backend/src/email/: mod.rs
backend/src/folders/: handlers.rs  mod.rs  models.rs
backend/src/recovery/: handlers.rs  mod.rs  models.rs  wordlist.rs
backend/src/shares/: handlers.rs  mod.rs  models.rs
backend/src/tags/: handlers.rs  mod.rs  models.rs
backend/src/trash/: handlers.rs  mod.rs  models.rs
database/: migration_activity_logs.sql  migration_audit_logs.sql  migration_email.sql  migration_folder_upload.sql  migration_folders.sql  migration_preview_support.sql  migration_recovery.sql  migration_recovery_lockout.sql  migration_session_fingerprint.sql  migration_session_touch.sql  migration_sessions_ip_ua.sql  migration_share_links.sql  migration_share_links_owner_key.sql  migration_share_permissions.sql  migration_tags.sql  migration_thumbnails.sql  migration_trash.sql  migration_trash_unique_fix.sql  schema.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: context.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: activity-log-panel.tsx  advanced-viewer.tsx  change-password-modal.tsx  delete-confirm-modal.tsx  file-details-panel.tsx  file-preview-modal.tsx  folder-sidebar.tsx  recovery-phrase-modal.tsx  scrambled-text.tsx  session-management-modal.tsx  settings-modal.tsx  share-modal.tsx  shared-links-panel.tsx  storage-meter.tsx  tag-badge.tsx  trash-panel.tsx  unlock-modal.tsx  verify-email-info-modal.tsx
frontend/src/hooks/: use-documents.ts
frontend/src/lib/: activity.ts  api.ts  bip39-words.ts  crypto-worker.ts  (+3 more)
(+26 files in other folders)
