[package]
name = "privault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework & Async Runtime
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization & Datatypes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication — Argon2id for server-side hashing of client auth verifiers
argon2 = "0.5"

# Cryptographic randomness for session token generation
rand = "0.8"

# Base64 encoding/decoding for token serialization
base64 = "0.22"

# SHA-256 for hashing session tokens before DB storage
sha2 = "0.10"
hex = "0.4"

# AWS (S3 + SES)
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.0"
aws-sdk-sesv2 = "1.0"

# Logging / Environment
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"

# (reqwest removed — email now goes through aws-sdk-sesv2)
